--- a/PayDay_Energosbyt/PayDay_Energosbyt.csproj
+++ b/PayDay_Energosbyt/PayDay_Energosbyt.csproj
@@ -125,6 +125,12 @@
     <Compile Include="Tabel.Designer.cs">
       <DependentUpon>Tabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vyplaty.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vyplaty.Designer.cs">
+      <DependentUpon>Vyplaty.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Doljnosti.resx">
       <DependentUpon>Doljnosti.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +163,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Tabel.resx">
       <DependentUpon>Tabel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vyplaty.resx">
+      <DependentUpon>Vyplaty.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
