--- a/PayDay_Energosbyt/PayDay_Energosbyt.csproj
+++ b/PayDay_Energosbyt/PayDay_Energosbyt.csproj
@@ -105,6 +105,18 @@
     <Compile Include="Otdely.Designer.cs">
       <DependentUpon>Otdely.cs</DependentUpon>
     </Compile>
+    <Compile Include="Print_Grafik_Dialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Print_Grafik_Dialog.Designer.cs">
+      <DependentUpon>Print_Grafik_Dialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Print_Tabel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Print_Tabel.Designer.cs">
+      <DependentUpon>Print_Tabel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raschetniki.cs">
@@ -145,6 +157,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Otdely.resx">
       <DependentUpon>Otdely.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Print_Grafik_Dialog.resx">
+      <DependentUpon>Print_Grafik_Dialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Print_Tabel.resx">
+      <DependentUpon>Print_Tabel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
