--- a/PayDay_Energosbyt/PayDay_Energosbyt.csproj
+++ b/PayDay_Energosbyt/PayDay_Energosbyt.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Print_Tabel_Dialog.Designer.cs">
       <DependentUpon>Print_Tabel_Dialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Print_Vedomost_Dialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Print_Vedomost_Dialog.Designer.cs">
+      <DependentUpon>Print_Vedomost_Dialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Raschetniki.cs">
@@ -163,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Print_Tabel_Dialog.resx">
       <DependentUpon>Print_Tabel_Dialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Print_Vedomost_Dialog.resx">
+      <DependentUpon>Print_Vedomost_Dialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
